# axum-actixweb-demo

./: .gitignore  Cargo.toml  README.md
actixweb-server/: Cargo.toml
actixweb-server/src/: main.rs
axum-server/: Cargo.toml
axum-server/src/: main.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
shared/: Cargo.toml
shared/src/: auth.rs  error.rs  graphql.rs  lib.rs  models.rs
