[package]
name = "actixweb-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actixweb-server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = "7.0"
sqlx = { workspace = true }
actix-cors = "0.7"
actix-web-lab = "0.22"