[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tabled = "0.15"
futures = "0.3"